--- a/style.css
+++ b/style.css
@@ -495,6 +495,9 @@ footer div button a{
     
 }
 @media screen and (max-width:500px) {
+    .hero-section{
+        text-align: center;
+    }
     .hero-section h1{
         font: 25px;
     }
